--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "testwatch": "nodemon --exec 'npm test'"
   },
+  "engines": {
+    "node":"14.5.0"
+  },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
